fix: Dark Mode Accessibility Issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,7 +20,6 @@
 
   --ifm-color-primary: #1877F2;
   --ifm-color-info: #25C2A0;
-  --ifm-font-color-base: #000;
 
   --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light), 54%);
   --ifm-color-primary-lighter: hsl(
